# Engine

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.MD  autoruntests  build.bat  build.sh  notes.txt  test.db  vcpkg.json
.devcontainer/: devcontainer.json
.github/workflows/: cmake-multi-platform.yml
assets/shaders/: fragment.frag  vertex.glsl  vertex.vert
cmakeModules/: FindGLFW3.cmake  FindGLM.cmake
glad/include/glad/: glad.h
glad/src/: glad.c
imgui/: includeImgui.h
include/: shader.h
src/: App.cpp  App.h  GUI.cpp  GUI.h  Globals.h  InputSystem.cpp  InputSystem.h  Material.h  MeshImporter.h  Model.cpp  Model.h  PhysicsSystem.cpp  PhysicsSystem.h  Platform.cpp  Platform.h  Renderer.cpp  Renderer.h  RenderingSystem.cpp  RenderingSystem.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  SpaceManager.cpp  SpaceManager.h  Vulkan.h  main.cpp
src/Components/: components.h  position.h  renderer.h  velocity.h
